<package format="3">
  <name>foxglove_lidar_calib</name>
  <version>0.1.0</version>
  <description>RPY-tunable LiDAR-camera calibration via Foxglove</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
